# nornir_batfish

./: .env.example  .pydocstyle.ini  .pylintrc  .yamllint.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  python-app.yml
docs/: CHANGELOG.md
nornir_batfish/: __init__.py
nornir_batfish/helpers/: functions.py
nornir_batfish/plugins/tasks/: __init__.py  batfish_init.py  batfish_setup.py  bf_assertions_helpers.py  bf_docker.py  bf_init.py  helpers.py
tests/: conftest.py
tests/integration/: test_batfish_setup.py  test_bf_assertions.py  test_bf_docker.py
tests/inventory_data/: hosts.yml
tests/unit/: test_batfish_setup.py  test_docker_manager_unit.py  test_helpers.py
tests/unit/test_data/mpls_sdn_era/configs/: AS65000_P1.cfg  AS65000_PE100.cfg  AS65000_PE101.cfg  AS65000_PE2.cfg  AS65000_PE4.cfg  AS65000_RR1.cfg  AS65000_RR2.cfg  AS65001_CE1.cfg  AS65001_CE3.cfg  AS65001_CE4.cfg
