[tool.poetry]
name = "nornir_batfish"
version = "0.1.0"
description = "Batfish Plugin for Nornir"
authors = ["h4ndzdatm0ld <hugotinoco@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^3.1.1"
pybatfish = "^2021.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docker = "^5.0.0"
flake8 = "^3.9.2"
pylint = "^2.9.3"
PyYAML = "^5.4.1"
black = "^21.6b0"
pytest-cov = "^2.12.1"
nornir-utils = "^0.1.2"
yamllint = "^1.26.1"
bandit = "^1.7.0"
ipython = "^8.10.0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"
